--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Github Homepage</title>
+</head>
+<body>
+	<nav>
+		<ul>
+			<li><a href="http://mattallinson.com">Personal webpage</a></li>
+			<li><a href="/cricket_stdev/">Amusing cricket project</a></li>
+		</ul>		
+	</nav>
+<main>
+	<p> Hi I'm Matt. I live in Helsinki and there isn't a lot on this page.
+</main>
+
+</body>
+</html>
