--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</ul>		
 	</nav>
 <main>
-	<p> Hi I'm Matt. I live in Helsinki and there isn't a lot on this page.
+	<p> Hi I'm Matt. I live in Helsinki and there isn't a lot on this page.</p>
 </main>
 
 </body>
