--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Github Homepage</title>
+	<title>Matt Allinson's Github Homepage</title>
+	<link rel="stylesheet" type="text/css" href="static/main.css">
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="http://mattallinson.com">Personal webpage</a></li>
-			<li><a href="/cricket_stdev/">Amusing cricket project</a></li>
-		</ul>		
+		<a href="http://mattallinson.com">Personal webpage</a> | <a href="/cricket_stdev/">Amusing cricket project</a> | <a href="https://github.com/mattallinson?tab=repositories">Other github projects</a> | <a href="https://www.linkedin.com/in/mattrallinson/"> My Linkedin </a>
+				
 	</nav>
 <main>
-	<p> Hi I'm Matt. I live in Helsinki and there isn't a lot on this page.</p>
+	<h1> Hi I'm Matt.</h1>
+	<img src="static/me.jpg">
+	<p>I live in Helsinki. There isn't a lot on this page. Got to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff</p>
 </main>
 
 </body>
