corrected typos, added fonts

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 	<nav>
-		<a href="http://mattallinson.com">Personal webpage</a> | <a href="/cricket_stdev/">Amusing cricket project</a> | <a href="https://github.com/mattallinson?tab=repositories">Other github projects</a> | <a href="https://www.linkedin.com/in/mattrallinson/"> My Linkedin </a>
+		|<a href="http://mattallinson.com">Personal webpage</a> | <a href="/cricket_stdev/">Amusing cricket project</a> | <a href="https://github.com/mattallinson?tab=repositories">Other github projects</a> | <a href="https://www.linkedin.com/in/mattrallinson/"> My Linkedin </a>
 				
 	</nav>
 <main>
-	<h1> Hi I'm Matt.</h1>
+	<h1> Hi I'm Matt</h1>
 	<img src="static/me.jpg">
-	<p>I live in Helsinki. There isn't a lot on this page. Got to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff</p>
+	<p>I live in Helsinki, I work at Aalto university as a communications specialist for their school of science. For fun I often code web scrapers in python that do stupid things, like tweet where nuclear waste is or calculate the average colour of instagram. Go to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff</p>
 </main>
 
 </body>
