--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	</nav>
 <main>
 	<h1> Hi I'm Matt</h1>
-	<img src="static/me.jpg">
-	<p>I live in Helsinki, I work at Aalto university as a communications specialist for their school of science. For fun I often code web scrapers in python that do stupid things, like tweet where nuclear waste is or calculate the average colour of instagram. Go to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff.</p>
+	<a href="http://mattallinson.com"><img src="static/me.jpg"></a>
+	<p>I live in Helsinki, I work at Aalto university as a communications specialist for their school of science.</p><p> For fun I often code web scrapers in python that do stupid things, like tweet where nuclear waste is or calculate the average colour of instagram. Go to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff.</p>
 </main>
 
 </body>
