--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 	<nav>
-		|<a href="http://mattallinson.com">Personal webpage</a> | <a href="/cricket_stdev/">Amusing cricket project</a> | <a href="https://github.com/mattallinson?tab=repositories">Other github projects</a> | <a href="https://www.linkedin.com/in/mattrallinson/"> My Linkedin </a>
+		<a href="http://mattallinson.com">Personal webpage</a> <a href="/cricket_stdev/">Amusing cricket project</a> <a href="https://github.com/mattallinson?tab=repositories">Other github projects</a> <a href="https://www.linkedin.com/in/mattrallinson/"> My Linkedin </a>
 				
 	</nav>
-<main>
-	<h1> Hi I'm Matt</h1>
-	<a href="http://mattallinson.com"><img src="static/me.jpg"></a>
-	<p>I live in Helsinki, I work at Aalto university as a communications specialist for their school of science.</p><p> For fun I often code web scrapers in python that do stupid things, like tweet where nuclear waste is or calculate the average colour of instagram. Go to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff.</p>
-</main>
+	<main>
+		<h1> Hi I'm Matt</h1>
+		<a href="http://mattallinson.com"><img src="static/me.jpg"></a>
+		<p>I live in Helsinki, I work at Aalto university as a communications specialist for their school of science.</p><p> For fun I often code web scrapers in python that do stupid things, like tweet where nuclear waste is or calculate the average colour of instagram. Go to <a href="http://mattallinson.com">mattallinson.com</a> for more stuff.</p>
+	</main>
 
 </body>
 </html>
