--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>Matt Allinson</h1>
 		<img src="static/me.png">
 		<h2>About me</h2>
-		<p> I have a PhD in printable photovoltaics from Imperial College London, 2016. Since then, I've worked in research institutions, hospitals, and universities doing science communication and research engagement. I have also done freelance science writing
+		<p> I have a PhD in printable photovoltaics from Imperial College London, 2016. Since then, I've worked in research institutions, hospitals, and universities doing science communication and research engagement. I have also done freelance science writing.
 		</p>
 		<h2>Selected Works</h2>
 		<ul>
