--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		<h1>Matt Allinson</h1>
 		<img src="static/me.png">
 		<h2>About me</h2>
-		<p> I have a PhD in printable photovoltaics from Imperial College London, 2016. Since then, I've worked in research institutions, hospitals, and universities doing science communication and research engagement. I have also done freelance science writing.
+		<p> I have a PhD in printable photovoltaics from Imperial College London, 2016. I've worked for the past 8 years in knowledge transfer for research institutions and hospitals. I still code <a href="https://github.com/mattallinson">silly things</a> for fun and done freelance science writing. 
 		</p>
+		<p> I sing bass in <a href="https://nychoral.org/">New York Choral Society</a> and I co-founded <a href="https://www.harmoniesofhope.co.uk/">Harmonies of Hope</a> childrens choir for paediatric transplant patients and their siblings.</p>
 		<h2>Selected Works</h2>
 		<ul>
 			<li><a href="https://www.vice.com/en/article/88nq84/scientists-want-to-smell-ocean-radiation-to-predict-tsunamis">Scientists Want to Smell Ocean Radiation to Predict Tsunamis</a> &mdash; VICE</li>
