--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<h1>Matt Allinson</h1>
 		<img src="static/me.png">
 		<h2>About me</h2>
-		<p> I have a PhD in printable photovoltaics from Imperial College London, 2016. I've worked for the past 8 years in knowledge transfer for research institutions and hospitals. I still code <a href="https://github.com/mattallinson">silly things</a> for fun and do freelance science writing. 
+		<p> I am an associate editor at <a href="https://nature.com/nrct">Nature Reviews Clean Technology</a>, mostly covering renewable energy. Sometimes I code stupid things, like an AI that generates <a href="/village-app-lite/">fictional english villages</a>, or a bot that tweets the location of trains carrying <a href="https://twitter.com/nucleartrains">nuclear waste</a>. I have a PhD in plastic electronics from Imperial College London (2016), and have worked in academic publishing, science writing, and knowledge transfer in London, New York, and Helsinki. 
 		</p>
 		<p> I sing bass in <a href="https://nychoral.org/">New York Choral Society</a> and I co-founded <a href="https://www.harmoniesofhope.co.uk/">Harmonies of Hope</a> childrens choir for paediatric transplant patients and their siblings.</p>
-		<h2>Selected Works</h2>
+		<h2>Selected Writing</h2>
 		<ul>
 			<li><a href="https://www.vice.com/en/article/88nq84/scientists-want-to-smell-ocean-radiation-to-predict-tsunamis">Scientists Want to Smell Ocean Radiation to Predict Tsunamis</a> &mdash; VICE</li>
 			<li><a href="https://www.wired.co.uk/article/spacex-nasa-crew-dragon-music">Nasa's SpaceX launch means the return of astronaut wake-up calls</a>&mdash; WIRED UK</li>
